<resources>
    <string name="app_name">Mindfulness</string>
    <string name="LoginText">login</string>
    <string name="PasswordText">password</string>
    <string name="RegisterText">Register</string>
    <string name="waterIntake">Track your water intake</string>
    <string name="SleepTracker">Build and maintain a healthy sleep schedule</string>
    <string name="TrackMoodState">Track and record your moodstate</string>
    <string name="Mediation">Practice meditation and mindfulness</string>
    <string name="Journal">Write and read through your own journal</string>
    <string name="question1">I am grateful for…</string>
    <string name="question2">What would make today great?</string>
    <string name="question3">How could I make today even better?</string>
    <string name="deleteButton">Delete</string>
    <string name="backButton">Back</string>
    <string name="blueButton">How do I build and maintain a positive mood?</string>
    <string name="hintEmail">Valid Email</string>
    <string name="startWater">0</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="writeText">write</string>
    <string name="register">Not registered?</string>
    <string name="signupText">Sign up</string>
    <string name="test">test</string>
    <string name="sleep1">Time you went to sleep:</string>
    <string name="sleep2">Time you woke up:</string>
    <string name="setText">Click to set time</string>
    <string name="hours_of_sleep">Hours of sleep:</string>
</resources>
